--- a/templates/jsn_blank2/css/bootstrap.css
+++ b/templates/jsn_blank2/css/bootstrap.css
@@ -5157,7 +5157,7 @@ tbody.collapse.in {
 
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #e7e7e7;
+  /* border-color: #e7e7e7; */
 }
 
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
