--- a/templates/jsn_blank2/css/core/general_1c383cd30b7c298ab50293adfecb7b18.css
+++ b/templates/jsn_blank2/css/core/general_1c383cd30b7c298ab50293adfecb7b18.css
@@ -57,20 +57,12 @@ h6, .h6 {
   background-color: #8596a9;
 }
 .btn-primary {
-  border-width: 0px;
-  border-color: #fa9348;
-}
-.btn-primary {
   background: #f76b1c;
-  color: #fff;
   font-size: 12px;
   letter-spacing: 0px;
   text-transform: uppercase;
-  -webkit-box-shadow: 0px 0px 0px 0px #fa9348;
-  box-shadow: 0px 0px 0px 0px #fa9348;
-}
-.btn-primary:hover, .btn-primary:focus {
-  color: #fff;
+  -webkit-box-shadow: 0px 0px 0px #000;
+  box-shadow: 0px 0px 0px #000;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary.active {
   background-color: #fa9348;
