--- a/templates/jsn_blank2/scss/custom/_custom.scss
+++ b/templates/jsn_blank2/scss/custom/_custom.scss
@@ -88,6 +88,8 @@ $btn-text-transform: uppercase;
 $padding-plain-vertical : 0;
 $padding-plain-horizontal :0;
 $counter-color : #64bb21;
+$btn-top-x-padding: 13px;
+$btn-top-y-padding: 30px;
 
 $transition: 0.3s background;
 $title-color-dark: $brand-dark;
