--- a/templates/jsn_blank2/scss/custom/_maler.scss
+++ b/templates/jsn_blank2/scss/custom/_maler.scss
@@ -114,10 +114,14 @@ p {
   color: #5e6e76;
 }
 
-.header-menu {
-  display: flex !important;
-  flex-direction: row;
-  justify-content: center;
+
+
+@media screen and (min-width:768px) {
+  .header-menu {
+    display: flex !important;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 .maler-left {
@@ -142,6 +146,7 @@ p {
 
 .maler.maler--center {
   padding: 33px 37px;
+  transition: .3s all;
 
   .maler__image {
     margin-bottom: 30px;
@@ -150,11 +155,32 @@ p {
   h3.maler__title {
     margin-bottom : 4px;
   }
+
+  i {
+    transition: .3s all;
+  }
+  
+  &:hover {
+    transition: .3s all;
+
+    transform: translateY(-10px);
+    background-color: #ffffff;
+    box-shadow: 0 4px 19px 0 #dbe1e7;
+
+
+    i {
+      color: $brand-primary;
+      transition: .3s all;
+      transform: scale(1.3);
+    }
+  }
 }
 
 
 .maler.maler--count {
   padding: 30px 20px;
+  transition: .3s all !important;
+  position: relative;
 
   .maler__number {
     color: $brand-success;
@@ -168,6 +194,36 @@ p {
 
   .maler__desc {
     margin-bottom:  0;
+  }
+
+  .maler__content {
+    position: relative;
+    z-index: 1;
+  }
+
+  &.overlay:before {
+    background-image: radial-gradient(circle at 0 0,lighten($brand-success, 10%),$brand-success);
+    z-index: 0;
+    transition: .3s all;
+
+
+  }
+
+  &:hover {
+    color: $light;
+    transition: .3s all;
+
+    transform: translateY(-10px);
+    background-color: #ffffff;
+    box-shadow: 0 4px 19px 0 #dbe1e7;
+
+
+
+    .maler__number,
+    h3.maler__title,
+    .maler__desc {
+      color: inherit;
+    }
   }
 }
 
@@ -210,6 +266,7 @@ p {
 
 .maler.maler--feature {
   padding: 20px 30px;
+  position:relative;
 
   .maler__image {
     margin: 40px 0 60px 0;
@@ -226,6 +283,7 @@ p {
     }
   }
 
+
   .maler__desc {
     margin-bottom: 30px;
   }
@@ -235,6 +293,28 @@ p {
     margin: 0;
     font-size: 14px;
   }
+
+  .maler__image,
+  .maler__content {
+    position: relative;
+    z-index: 2;
+  }
+
+  &.overlay:before {
+//     position: relative;
+//     z-index: 1;
+    background-image: radial-gradient(circle at 0 0,lighten($brand-primary, 10%),$brand-primary);
+  }
+
+
+  &:hover {
+    color: $light;
+
+    i,p,a {
+      color: inherit !important;
+    }
+  }
+
 }
 
 .maler.maler--isotope {
@@ -287,6 +367,19 @@ p {
 .maler.maler--journal {
   a[data-name="Featured Image"] {
     width: 100%;
+
+    img {
+      transition: .3s transform;
+      max-height: 300px;
+      object-fit: cover;
+    }
+
+    &:hover {
+      img {
+        transform: scale(1.4) rotate(10deg);
+        transition: .3s transform;
+      }
+    }
   }
 
   a[data-name="Title"] {
@@ -324,6 +417,8 @@ p {
   .maler__content {
     padding: 20px;
   }
+
+
 }
 
 .maler-card {
@@ -434,6 +529,10 @@ button {
     -webkit-transition: ease opacity 300ms 100ms;
     transition: ease opacity 300ms 100ms;
   }
+
+  &.overlay:before {
+    background-image: radial-gradient(circle at 0 0,lighten($brand-primary, 10%),$brand-primary);
+  }
 }
 
 .overlay:before {
@@ -444,25 +543,58 @@ button {
     bottom: 0;
     left: 0;
     z-index: 2;
-    background-image: radial-gradient(circle at 0 0,lighten($brand-primary, 10%),$brand-primary);
     opacity: 0;
     pointer-events: none;
-    -webkit-transition: ease opacity 300ms 100ms;
-    transition: ease opacity 300ms 100ms;
+//     -webkit-transition: ease opacity 300ms 100ms;
+//     transition: ease opacity 300ms 100ms;
 }
 
 .overlay:hover:before {
   opacity: 1;
-  -webkit-transition: ease opacity 300ms 100ms;
-  transition: ease opacity 300ms 100ms;
+//   -webkit-transition: ease opacity 300ms 100ms;
+//   transition: ease opacity 300ms 100ms;
 }
 
 .maler-header #menu_item_menu {
-  background-color: transparent !important;
+  // background-color: transparent !important;
 }
 
-.maler-promo {
+/* .maler-header {
+
+  
+  span.nav-header:hover {
+    background-color: transparent !important;
+  }
+
+  a.clearfix:hover,
+  a.clearfix:focus {
+    background-color: transparent !important;
+
+  }
+
+
+
+} */
+
+.maler-top-menu,
+.maler-header {
   position: relative;
+  z-index: 1;
+}
+
+
+
+
+
+.maler-promo {
+
+  @media (min-width: 768px) { 
+    position: relative;
+    margin-top: -190px;
+    z-index: 0;
+   }
+
+
   &:before {
     position: absolute;
     top: 0;
@@ -472,5 +604,46 @@ button {
     content: ' ';
     background-image: linear-gradient(rgba(29, 40, 46, 0.8), rgba(29, 40, 46, 0.8)), linear-gradient(to bottom, rgba(4, 3, 8, 0.73), rgba(0, 0, 0, 0));
   }
+}
+
+.sunfw-sticky.maler-header {
+  background-color: transparent;
+
+  &.sunfw-sticky-open {
+    background-color: $dark;
+  }
+}
+
+@media screen and (min-width: 768px){
+  .sunfw-sticky.maler-header {
+//     background-color: lighten($dark, 10%);
+
+  &:not(.sunfw-sticky-open){
+    background-color: transparent;
+    position: relative;
+    z-index: 99;
+    transition: background-color 0.5s ease-in-out;
+  }
+
+    &.sunfw-sticky-open {
+      background-color: $dark;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      right: 0;
+      z-index: 999999;
+    }
+  }
+
+
+  .maler-top-menu.sunfw-sticky {
+    background-color: lighten($dark, 10%);
+
+    &.sunfw-sticky-open {
+      background-color: $dark;
+    }
+  }
+
 }
 
