--- a/templates/jsn_blank2/css/core/menu_1c383cd30b7c298ab50293adfecb7b18.css
+++ b/templates/jsn_blank2/css/core/menu_1c383cd30b7c298ab50293adfecb7b18.css
@@ -1,11 +1,17 @@
 #menu_item_menu ul.navbar-nav > li > a, #menu_item_menu ul.navbar-nav > li > span.nav-header {
   font-size: 14px;
+  color: #fff;
 }
 #menu_item_menu ul.navbar-nav > li:hover > a, #menu_item_menu ul.navbar-nav > li.active > a, #menu_item_menu ul.navbar-nav > li:hover > span.nav-header, #menu_item_menu ul.navbar-nav > li.active > span.nav-header {
   color: #f76b1c;
 }
+#menu_item_menu ul.dropdown-menu, #menu_item_menu ul.sunfw-megamenu-sub-menu, #menu_item_menu .modulecontainer ul.nav-child {
+  background-color: #fff;
+}
 #menu_item_menu ul.dropdown-menu li a, #menu_item_menu ul.sunfw-megamenu-sub-menu li a, #menu_item_menu .modulecontainer ul.nav-child li a, #menu_item_menu ul.dropdown-menu li span.nav-header, #menu_item_menu ul.sunfw-megamenu-sub-menu li span.nav-header, #menu_item_menu .modulecontainer ul.nav-child li span.nav-header {
   font-size: 14px;
+  color: #000;
+  text-transform: none;
 }
 #menu_item_menu ul.dropdown-menu li a:hover, #menu_item_menu ul.sunfw-megamenu-sub-menu li a:hover, #menu_item_menu .modulecontainer ul.nav-child li a:hover, #menu_item_menu ul.dropdown-menu li span.nav-header:hover, #menu_item_menu ul.sunfw-megamenu-sub-menu li span.nav-header:hover, #menu_item_menu .modulecontainer ul.nav-child li span.nav-header:hover, #menu_item_menu ul.dropdown-menu li a:focus, #menu_item_menu ul.sunfw-megamenu-sub-menu li a:focus, #menu_item_menu .modulecontainer ul.nav-child li a:focus, #menu_item_menu ul.dropdown-menu li span.nav-header:focus, #menu_item_menu ul.sunfw-megamenu-sub-menu li span.nav-header:focus, #menu_item_menu .modulecontainer ul.nav-child li span.nav-header:focus, #menu_item_menu ul.dropdown-menu li a.current, #menu_item_menu ul.sunfw-megamenu-sub-menu li a.current, #menu_item_menu .modulecontainer ul.nav-child li a.current, #menu_item_menu ul.dropdown-menu li span.nav-header.current, #menu_item_menu ul.sunfw-megamenu-sub-menu li span.nav-header.current, #menu_item_menu .modulecontainer ul.nav-child li span.nav-header.current {
   background-color: custom;
@@ -20,5 +26,5 @@
   color: #f76b1c;
 }
 #menu_item_menu ul.dropdown-menu, #menu_item_menu ul.sunfw-megamenu-sub-menu ul {
-  width: 200px;
+  width: 182px;
 }
