--- a/templates/jsn_blank2/scss/custom/_button.scss
+++ b/templates/jsn_blank2/scss/custom/_button.scss
@@ -58,7 +58,7 @@
 
     &.btn-top-download {
         color: rgba($light,0.5) !important;
-        background-color: rgba($light, 0.1);
+        background-color: #454D51;
         border: solid 1px rgba($light, 0.2)!important;
         &:hover {
           color: $light !important;
