--- a/templates/jsn_blank2/scss/custom/_custom.scss
+++ b/templates/jsn_blank2/scss/custom/_custom.scss
@@ -94,4 +94,6 @@ $btn-top-y-padding: 30px;
 $transition: 0.3s background;
 $title-color-dark: $brand-dark;
 
+// sticky variables.
 
+$sticky-active-bg : $light;
