--- a/templates/jsn_blank2/css/bootstrap.css
+++ b/templates/jsn_blank2/css/bootstrap.css
@@ -1386,7 +1386,7 @@ body {
   font-size: 14px;
   line-height: 1.42857;
   color: #4B4B4B;
-  /* background-color: #fff; */
+  background-color: #fff;
   background-color: transparent;
 }
 
