--- a/templates/jsn_blank2/css/core/menu_a5bfc9e07964f8dddeb95fc584cd965d.css
+++ b/templates/jsn_blank2/css/core/menu_a5bfc9e07964f8dddeb95fc584cd965d.css
@@ -1,12 +1,12 @@
 #menu_item_menu ul.navbar-nav > li > a, #menu_item_menu ul.navbar-nav > li > span.nav-header {
   font-size: 12px;
-  color: #000;
+  color: #fff;
   text-transform: none;
   font-family: 'Roboto';
   font-weight: 900;
 }
 #menu_item_menu ul.navbar-nav > li:hover > a, #menu_item_menu ul.navbar-nav > li.active > a, #menu_item_menu ul.navbar-nav > li:hover > span.nav-header, #menu_item_menu ul.navbar-nav > li.active > span.nav-header {
-  color: #f76b1c;
+  color: #7db633;
 }
 #menu_item_menu ul.dropdown-menu, #menu_item_menu ul.sunfw-megamenu-sub-menu, #menu_item_menu .modulecontainer ul.nav-child {
   background-color: #fff;
@@ -17,13 +17,16 @@
   text-transform: none;
 }
 #menu_item_menu ul.dropdown-menu li a:hover, #menu_item_menu ul.sunfw-megamenu-sub-menu li a:hover, #menu_item_menu .modulecontainer ul.nav-child li a:hover, #menu_item_menu ul.dropdown-menu li span.nav-header:hover, #menu_item_menu ul.sunfw-megamenu-sub-menu li span.nav-header:hover, #menu_item_menu .modulecontainer ul.nav-child li span.nav-header:hover, #menu_item_menu ul.dropdown-menu li a:focus, #menu_item_menu ul.sunfw-megamenu-sub-menu li a:focus, #menu_item_menu .modulecontainer ul.nav-child li a:focus, #menu_item_menu ul.dropdown-menu li span.nav-header:focus, #menu_item_menu ul.sunfw-megamenu-sub-menu li span.nav-header:focus, #menu_item_menu .modulecontainer ul.nav-child li span.nav-header:focus, #menu_item_menu ul.dropdown-menu li a.current, #menu_item_menu ul.sunfw-megamenu-sub-menu li a.current, #menu_item_menu .modulecontainer ul.nav-child li a.current, #menu_item_menu ul.dropdown-menu li span.nav-header.current, #menu_item_menu ul.sunfw-megamenu-sub-menu li span.nav-header.current, #menu_item_menu .modulecontainer ul.nav-child li span.nav-header.current {
-  color: #f76b1c;
+  background-color: #e6e6e6;
+  color: #7db633;
 }
 #menu_item_menu ul.dropdown-menu li.active > a, #menu_item_menu ul.sunfw-megamenu-sub-menu li.active > a, #menu_item_menu .modulecontainer ul.nav-child li.active > a, #menu_item_menu ul.dropdown-menu li.active > span.nav-header, #menu_item_menu ul.sunfw-megamenu-sub-menu li.active > span.nav-header, #menu_item_menu .modulecontainer ul.nav-child li.active > span.nav-header {
-  color: #f76b1c;
+  background-color: #e6e6e6;
+  color: #7db633;
 }
 #menu_item_menu ul.sunfw-megamenu-sub-menu li.current > a, #menu_item_menu ul.sunfw-megamenu-sub-menu li.current > span.nav-header {
-  color: #f76b1c;
+  background-color: #e6e6e6;
+  color: #7db633;
 }
 #menu_item_menu ul.dropdown-menu, #menu_item_menu ul.sunfw-megamenu-sub-menu ul {
   width: 182px;
